# ihealth-pinns-workshop

./: LICENSE  README.md  pinn-ihealth-tutorial.toml  pinn-ihealth-tutorial.yml  pyproject.toml  setup.py
data/: README.md
notebooks/: README.md  activity-1.ipynb  activity-2.ipynb  activity-3.ipynb  activity1.py  activity2.ipynb  activity2.py  activity3.py  utils.py
notebooks/.ipynb_checkpoints/: activity-1-checkpoint.ipynb
solutions/: activity1.py  activity2.py  activity3.py  activity4.py  utils.py
