[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pinns_workshop"
version = "0.0.0"
description = "Ihealth workshop about Physics-Informed Neural Networks (PINNs)."
authors = [
  { name="Rodrigo Salas", email="rodrigo.salas@uv.cl" },
  { name="David Ortiz", email="david.ortiz.puerta@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib",
    "jupyterlab",
    "pytorch>=2.3",
    "sympy>=1.12",
    "ipympl>=0.9",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
# test = [
#     "pytest>=7.2.0",
# ]
lint = [
    "black>=22.12.0",
    # "pylint",
    "pydocstyle",
    "mypy>=1.0.0",
    "jupyter-black",
]

[tool.setuptools]
package-dir = {}